Correct issues discovered with the self-service integration tests
The self-service integration tests revealed that the handlers had
mistakes and needs corrections. These are all the changes necessary to
pass self-service integration tests fully when running against Uluru
resources.